# vistracer

./: .eslintrc.cjs  .gitignore  39ld0o.sh  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DYNAMIC_DAYNIGHT.md  GEOLITE2_SETUP.md  PRD.md  README.md  package-lock.json  package.json  prettier.config.cjs  tauri-migration.patch  tsconfig.base.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts  vitest.config.ts  vitest.e2e.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  website.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  net.rs  types.rs
src-tauri/src/commands/: dns.rs  geo.rs  geodb_downloader.rs  integrations.rs  mod.rs  persistence.rs  traceroute.rs
src/common/: bridge.ts  ipc.ts  net.ts
src/common/__tests__/: net.test.ts
src/main/: main.ts  preload.ts
src/main/services/: dns.ts  geo.ts  geodb-downloader.ts  integrations.ts  ipc.ts  logger.ts  persistence.ts  traceroute.ts
src/renderer/: index.html  main.tsx
src/renderer/hooks/: useGeoDatabaseMeta.ts  useModalA11y.ts  useRecentRuns.ts  useTracerouteSubscription.ts
tests/e2e/: bridge.test.ts  geodb-management.test.ts  net-utilities.test.ts  settings-persistence.test.ts  store-integration.test.ts  traceroute-flow.test.ts
types/: electron-store.d.ts  maxmind.d.ts  mmdb-lib.d.ts
website/: astro.config.mjs  package-lock.json  package.json
website/public/: CNAME
(+37 files in other folders)
