[package]
name = "vistracer"
version = "0.2.0"
description = "Visual traceroute desktop application"
authors = ["VisTracer Team"]
license = "MIT"
repository = "https://github.com/rush-skills/vistracer"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
maxminddb = "0.24"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
dns-lookup = "2"
flate2 = "1"
tar = "0.4"
chrono = "0.4"
dirs = "6"
thiserror = "2"
regex = "1"
urlencoding = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
